// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders CompanyType is Enterprise 1`] = `
<span>
  <div
    className="less tag"
  >
    Enterprise
  </div>
</span>
`;

exports[`renders CompanyType is Startup 1`] = `
<span>
  <div
    className="less tag"
  >
    Startup
  </div>
</span>
`;
